feat: added login skeleton

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,19 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".SplashActivity" android:theme="@style/AppTheme.Launcher">
+        <activity
+                android:name=".SplashActivity"
+                android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+                android:name=".LoginActivity"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <activity
                 android:name=".HomeActivity"
@@ -25,8 +31,9 @@
 
         <activity android:name=".MainActivity"></activity>
 
-        <activity android:name=".ProfileActivity"
-                  android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+                android:name=".ProfileActivity"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
