feat: added signup skeleton

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
                 android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <activity
+                android:name=".SignupActivity"
+                android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity
                 android:name=".HomeActivity"
                 android:label="@string/title_activity_home"
                 android:theme="@style/AppTheme.NoActionBar">
