--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,19 @@
         <activity
                 android:name=".SplashActivity"
                 android:theme="@style/AppTheme.Launcher">
+
+        </activity>
+
+        <activity
+                android:name=".LoginActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity
-                android:name=".LoginActivity"
-                android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <activity
                 android:name=".SignupActivity"
