--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.airbnb.android:lottie:3.0.0-beta1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.facebook.fresco:fresco:1.12.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
