--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
                 android:name=".view.ProfileActivity"
                 android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity android:name=".view.TermsWebViewActivity"></activity>
+
     </application>
 
 </manifest>
