--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity
                 android:name=".view.HomeActivity"
                 android:label="@string/title_activity_home"
+                android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
