--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,9 +45,9 @@
         <activity
                 android:name=".view.ProfileActivity"
                 android:theme="@style/AppTheme.NoActionBar"></activity>
-
         <activity android:name=".view.TermsWebViewActivity"></activity>
 
+        <activity android:name=".view.SinglePostActivity"></activity>
     </application>
 
 </manifest>
