--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
                 android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".view.TermsWebViewActivity"></activity>
 
-        <activity android:name=".view.SinglePostActivity"></activity>
+        <activity android:name=".view.SinglePostActivity" android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
