--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:theme="@style/AppTheme">
         <activity
                 android:name=".view.SplashActivity"
-                android:theme="@style/AppTheme.Launcher">
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
