feat: downgraded androidX to a stable channel and added dummy onboarding viewpager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,6 @@
         <activity
                 android:name=".view.SplashActivity"
                 android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
 
         <activity
@@ -47,7 +42,19 @@
                 android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".view.TermsWebViewActivity"></activity>
 
-        <activity android:name=".view.SinglePostActivity" android:theme="@style/AppTheme.NoActionBar">
+        <activity
+                android:name=".view.SinglePostActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+        <activity
+                android:name=".view.OnboardingActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
     </application>
 
